# JITdecoding-public

./: CMakeLists.txt  README.txt
src/: .mainToric.cpp.swp  CMakeLists.txt  decoderGeneric.cpp  decoderGeneric.h  decoderRhombic1.cpp  decoderRhombic1.h  decoderRhombic2.cpp  decoderRhombic2.h  decoderToric.cpp  decoderToric.h  mainRhombic1.cpp  mainRhombic2.cpp  mainToric.cpp  rhombic1.cpp  rhombic1.h  rhombic2.cpp  rhombic2.h  toricCodeSlice.cpp  toricCodeSlice.h
tst/: CMakeLists.txt  decoderRhombic1-test.cpp  decoderRhombic2-test.cpp  decoderToric-test.cpp  prepIndexVectors.h  prepIndexVectorsRhombic1.h  prepIndexVectorsRhombic2.h  rhombic1-test.cpp  rhombic2-test.cpp  toricCodeSlice-test.cpp
